# tree-sitter-parsley

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  literals.txt  statements.txt  strings.txt  tags.txt
