[package]
name = "tree-sitter-parsley"
version = "0.1.0"
description = "Parsley grammar for tree-sitter"
authors = ["Basil Contributors"]
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "parsley"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sambeau/tree-sitter-parsley"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
